2011-02-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a switch to turn on/off autoadding of {} after ^ and _ via keystroke.


2011-02-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/templace.c: Fix a little memory leak.


2011-01-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Move convert to table function to new Tableconvert plugin of Geany-Plugins.


2011-01-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Backport update from convert to table function from HTMLTable-plugin


2011-01-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding a feature which is converting a tabulator separated list into
   a LaTeX-like table.


2011-01-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Correction of some typos (Thanks to André Glória for reporting)


2010-10-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Try to fetch BibTeX entries from files inside working dir of file.


2010-10-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a first version of a dialog supporting inserting a bibtex entry.


2010-10-24  Frank Lanitz  <frank@frank.uvena.de>

 * Ensure LaTeX menu is added to menubar on loading plugin when there is
   already an LaTeX-document open.


2010-09-26  Frank Lanitz  <frank@frank.uvena.de>

 * Try to backport automatic generation of LINGUAS files into waf script
   as a backport from Geany-plugins build script.
 * Add a feature to put a icon for the wizard into Geany's main toolbar.


2010-09-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a feature that inserts capital letters on first letter of a
   sentence. This is not working with multibyte characters as German
   Umlauts.


2010-09-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Place LaTeX menu in front of help menu entry.


2010-09-12  Frank Lanitz  <frank@frank.uvena.de>

 * Moved LaTeX menu out of Tool menu and put it into generic menubar item.
   Make this menubar item be triggered by filetype.